--- a/app/css/stylesheet.css
+++ b/app/css/stylesheet.css
@@ -1,6 +1,17 @@
 #dropzone {
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 150px;
     border: 1px solid black;
     margin-bottom: 10px;
+
+}
+body {
+  padding-top: 50px;
+}
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
+#loading {
+	display:none;
 }
